fix: added prepare script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "test": "node build/test.js",
         "compile-win": ".\\scripts\\compile-win.bat",
         "compile-mac": "swiftc src/bin/MacKeyServer/main.swift -o bin/MacKeyServer",
-        "compile-x11": "scripts/compile-x11.sh"
+        "compile-x11": "scripts/compile-x11.sh",
+        "prepare": "npm run build"
     },
     "repository": {
         "type": "git",
