--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-global-key-listener",
-    "version": "0.3.3",
+    "version": "0.3.4",
     "description": "A module to listen to global key events",
     "types": "build/index.d.ts",
     "main": "build/index.js",
@@ -13,7 +13,7 @@
         "build": "tsc",
         "test": "node build/test.js",
         "compile-win": ".\\scripts\\compile-win.bat",
-        "compile-mac": "swiftc src/bin/MacKeyServer/main.swift -o bin/MacKeyServer",
+        "compile-mac": "swiftc src/bin/MacVoicenotesHelper/main.swift -o bin/MacVoicenotesHelper",
         "compile-x11": "scripts/compile-x11.sh",
         "prepare": "npm run build"
     },
